--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,49 @@
     --light: rgba(238, 238, 247, 1);
   }
   
-h2 {text; color: var(--primary); 
+  .flex-container {
+    display:flex; 
+    
+  }
+ 
+  div {text-align: left;}
+ 
+header {display: inline }
+
+
+
+ul{ display: inline;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+} 
+
+li {
+  display: inline;
+}
+
+  nav a {
+    
+    text-decoration: none;
+    padding: 5px 10px;
+    color: var(--secondary);
+   background-color: var(--primary);
+    margin-right: 10px;
+    background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    font-size: 1.4rem;
+  }
+
+  nav a:hover {
+    background-size: 100% 100%;
+    color: var(--primary);
+  }
+ 
+
+  h2 {text: color; var(--primary); 
 font-weight: bolder; 
 background-color: var(--secondary);
 font: size 200px;
@@ -25,26 +67,32 @@ font: size 200px;
 aside {text-align: left;
 text:var(--primary)}
 
-header { position: relative;
+ flex container header { position: relative
   text-align: right;
-  flex_wrap; 
+  flex-wrap: 
   align;right: auto
-  margin; 50px
-  padding;50px 
+  margin;{ 50px}
+  padding {10} 
   background-color: var(--primary);
   color: var(--secondary); 
 }
 
-  body {
+  body  {
+    margin: 10;
+    padding: 10;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: var(--primary);
+    background-color: var(--light);
+    line-height: 1.5;
+  }
     
  
-    head { flex-wrap; 
-    align-items;left;
-    padding:50px; 
-    margin: 50px; 
-    background-color: var(--dark);
-}
-  } 
-   .nav {
+   
 
-}
+  
+main { 
+   background:linear-gradient(0deg, 
+   var(--transblue), var(--transblue)) 
+  
+  
+  }
