--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,10 @@ a {
   color: var(--secondary);
   text-decoration: none;
   color: var(--secondary);
-  z-index: 1;
+  z-index: 1; 
+
+
+
 }
 
 a::after {
@@ -81,7 +84,10 @@ a:hover::after {
   justify-content: space-between;
 }
 
-/* ! NAVIGATION LINKS ON HEADER */
+span {  
+
+align-items: end;
+}
 
 body {
   margin: 0;
@@ -102,9 +108,8 @@ ul {
 .banner {
   grid-area: banner;
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-end;
   align-items: flex-end;
-  padding: 40px 260px 40px;
   height: 200px;
   background-image: url("assets/images/02-hero-bg.jpg");
   background-repeat: no-repeat;
@@ -114,52 +119,89 @@ ul {
 .cool-subtitle {
   background-color: var(--secondary);
   color: var(--primary);
-  padding: 0px 30px 0 30px;
-  margin-right: 40px;  
-  text-align: right; 
-  font-size: 40px  
+  text-align: right;
+  font-size: 30px
 }
 
 
-
-.about-container { 
-  border-style: solid;
-  border: 10px
-  padding: 20px; 
-  border-color: var(--dark);
-  border-right: 10px;
+.grid-container {
+  display: grid;
+  grid: 150px / auto auto auto;
+  grid-template-columns: 6;
+  grid-template-rows: 6;
 }
 
-.about-flexbox {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-around;
-  align-items: center;
-  min-height: 50%;
-  max-width: 1400px;
-  padding: 20px;
-  border: 3px dashed purple;
+#r{
+  display:flex;
+  flex-direction:row;
+  width:100%;
+}
+#card-label{
+  width:fit-content;
+  display:flex;
+  flex-direction:column;
+  background-color:var(--secondary);
+  border:5px solid var(--secondary);
+  margin-top:80px;
 }
 
-
-
-
-aside {
-  flex:1 
-  min-width: 5%;
-  min-height: 200px;
-  border: 3px dotted green;
-  margin: 10px 0px 10px; 
+proj{
+  flex:15px 0 0 0;
+  background-size: cover;
+  background-repeat: none;
+  background-position:top;
+  background-blend-mode:darken;
+  margin:10px;
+  border: 4px solid var(--secondary);
   
 }
+proj:hover{
+  background-blend-mode:normal;    
+}
 
-section {
-  /* flex: 2; */
-  min-width: 68.5%;
-  min-height: 200px;
-  border: 3px dotted green;
-  margin: 10px 0px 10px;
+#big-card{
+  height:300px;
+  width:100%;
+  background-image:url("assets/images/02-portfolio-1.jpg");
+}
+#small-card1{
+  height:150px;
+  width: 50%;
+  background-image:url("assets/images/02-portfolio-2.jpg");
+}
+#small-card2{
+  height:150px;
+  width: 50%;
+  background-image:url("assets/images/02-portfolio-3.jpg");
+}
+#small-card3{
+  height:150px;
+  width:50%;
+  background-image:url("assets/images/02-portfolio-4.jpg");
+}
+#small-card4{
+  height:150px;
+  width:50%;
+  background-image:url("assets/images/02-run-buddy.jpg");
+}
+
+
+
+
+#cards{
+  display:flex;
+  flex-direction:column;
+  flex-wrap:wrap;
+  flex:0 0 70%;
+  border-left:3px solid var(--primary);
+  width:100%;
+  padding-left:20px;
+}
+.section{
+  margin:10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 /*! ::::::::::::: IMAGES SECTION ::::::::::::: */
@@ -168,7 +210,7 @@ section {
 }
 
 .img-label {
-  position: absolute;
+  position: relative;
   top: 420px;
   background-color: var(--secondary);
   font-size: 2rem;
@@ -179,13 +221,21 @@ section {
 
 .img-1 {
   position: relative;
-  /* min-width: 400px; */
+  min-width: 400px;
   height: 575px;
   background-size: 1850px;
-  background-image: url("../images/02-portfolio-4.jpg");
+  background-image: url("assets/images/02-portfolio-1.jpg;")
   margin-bottom: 20px;
 }
+ 
 
+.card-title {
+text-align: left;
+
+
+
+
+}
 @media screen and (max-width: 993px) {
 
   /* RESPONSIVE MEDIA CSS GOES HERE */
